--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -6,6 +6,6 @@ spring.jpa.database-platform=org.hibernate.dialect.PostgreSQLDialect
 
 spring.jpa.properties.javax.persistence.validation.mode=none
 
-
+server.error.whitelabel.enabled=false
 spring.jpa.show-sql=false
 spring.datasource.initialization-mode=always
