--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,11 +1,11 @@
 spring.datasource.driverClassName=org.postgresql.Driver
-spring.datasource.url=jdbc:postgresql://localhost:5432/hotel
-spring.datasource.username=postgres
-spring.datasource.password=123
+spring.datasource.url=jdbc:postgresql://0.0.0.0:5432/hotel
+spring.datasource.username=program
+spring.datasource.password=password
 spring.jpa.database-platform=org.hibernate.dialect.PostgreSQLDialect
 
 spring.jpa.properties.javax.persistence.validation.mode=none
 
 server.error.whitelabel.enabled=false
 spring.jpa.show-sql=false
-spring.datasource.initialization-mode=always
+spring.sql.init.mode=always
