Add simple email sender

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -9,3 +9,11 @@ spring.jpa.properties.javax.persistence.validation.mode=none
 server.error.whitelabel.enabled=false
 spring.jpa.show-sql=false
 spring.sql.init.mode=always
+
+spring.mail.host=smtp.yandex.ru
+spring.mail.port=465
+spring.mail.username=aleksejceresnev43
+spring.mail.password=mrtcisebypbemlyy
+spring.mail.properties.mail.smtp.auth=true
+spring.mail.properties.mail.smtp.ssl.enable=true
+spring.mail.properties.mail.smtp.starttls.enable=true
