Predefined Admin. Auto redirect when admin login.

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -8,7 +8,7 @@ spring.jpa.properties.javax.persistence.validation.mode=none
 
 server.error.whitelabel.enabled=false
 spring.jpa.show-sql=false
-spring.sql.init.mode=always
+spring.sql.init.mode=never
 
 spring.mail.host=smtp.yandex.ru
 spring.mail.port=465
