--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -13,7 +13,7 @@ spring.sql.init.mode=never
 spring.mail.host=smtp.yandex.ru
 spring.mail.port=465
 spring.mail.username=aleksejceresnev43
-spring.mail.password=wafaiwyujlkmuhzu
+spring.mail.password=****
 spring.mail.properties.mail.smtp.auth=true
 spring.mail.properties.mail.smtp.ssl.enable=true
 spring.mail.properties.mail.smtp.starttls.enable=true
