--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -4,11 +4,16 @@ spring.datasource.username=program
 spring.datasource.password=password
 spring.jpa.database-platform=org.hibernate.dialect.PostgreSQLDialect
 
+spring.servlet.multipart.max-file-size=20MB
+spring.servlet.multipart.max-request-size=20MB
+
 spring.jpa.properties.javax.persistence.validation.mode=none
 
 server.error.whitelabel.enabled=false
 spring.jpa.show-sql=false
 spring.sql.init.mode=never
+
+#logging.level.org.springframework.web=DEBUG
 
 spring.mail.host=smtp.yandex.ru
 spring.mail.port=465
@@ -16,6 +21,6 @@ spring.mail.username=aleksejceresnev43
 spring.mail.password=****
 spring.mail.properties.mail.smtp.auth=true
 spring.mail.properties.mail.smtp.ssl.enable=true
-spring.mail.properties.mail.smtp.starttls.enable=true
+spring.mail.properties.mail.smtp.starttls.enable=true 
 
 application.host.name=localhost:8080
