--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -13,14 +13,15 @@ server.error.whitelabel.enabled=false
 spring.jpa.show-sql=false
 spring.sql.init.mode=never
 
-#logging.level.org.springframework.web=DEBUG
-
 spring.mail.host=smtp.yandex.ru
 spring.mail.port=465
 spring.mail.username=aleksejceresnev43
-spring.mail.password=****
+spring.mail.password=kasjhmywpocrslnf
 spring.mail.properties.mail.smtp.auth=true
 spring.mail.properties.mail.smtp.ssl.enable=true
-spring.mail.properties.mail.smtp.starttls.enable=true 
+spring.mail.properties.mail.smtp.starttls.enable=true
+
+spring.thymeleaf.hiddenmethod.filter.enabled=false
 
 application.host.name=localhost:8080
+application.image.save.url=D:\\hotelImages\\rooms\\
